[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bridge4.png" type="Texture" id=1]
[ext_resource path="res://assets/bridge5.png" type="Texture" id=2]
[ext_resource path="res://assets/bridge2.png" type="Texture" id=3]
[ext_resource path="res://assets/bridge6.png" type="Texture" id=4]
[ext_resource path="res://assets/bridge3.png" type="Texture" id=5]
[ext_resource path="res://BridgeControl.gd" type="Script" id=6]
[ext_resource path="res://assets/bridge1.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.996078, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="BridgeControl" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Borders" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container1" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 267.0
margin_top = 496.0
margin_right = 339.0
margin_bottom = 552.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container2" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 357.102
margin_top = 560.74
margin_right = 429.102
margin_bottom = 616.74
rect_rotation = -91.108
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container3" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 440.0
margin_top = 493.0
margin_right = 503.0
margin_bottom = 554.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container4" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 527.0
margin_top = 493.0
margin_right = 590.0
margin_bottom = 554.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container5" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 610.408
margin_top = 492.159
margin_right = 673.408
margin_bottom = 554.159
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container6" type="PanelContainer" parent="CanvasLayer/Borders"]
margin_left = 699.0
margin_top = 491.0
margin_right = 763.0
margin_bottom = 554.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bridge1" type="TextureButton" parent="CanvasLayer"]
margin_left = 271.27
margin_top = 492.156
margin_right = 335.27
margin_bottom = 556.156
action_mode = 0
texture_normal = ExtResource( 7 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bridge2" type="TextureButton" parent="CanvasLayer"]
margin_left = 353.387
margin_top = 493.1
margin_right = 417.387
margin_bottom = 557.1
action_mode = 0
texture_normal = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bridge3" type="TextureButton" parent="CanvasLayer"]
margin_left = 434.616
margin_top = 486.549
margin_right = 498.616
margin_bottom = 550.549
action_mode = 0
texture_normal = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bridge4" type="TextureButton" parent="CanvasLayer"]
margin_left = 531.257
margin_top = 486.549
margin_right = 595.257
margin_bottom = 550.549
action_mode = 0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bridge5" type="TextureButton" parent="CanvasLayer"]
margin_left = 615.162
margin_top = 494.789
margin_right = 679.162
margin_bottom = 558.789
action_mode = 0
texture_normal = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bridge6" type="TextureButton" parent="CanvasLayer"]
margin_left = 693.823
margin_top = 494.04
margin_right = 757.823
margin_bottom = 558.04
action_mode = 0
texture_normal = ExtResource( 4 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="CanvasLayer/Labels"]
margin_left = 272.0
margin_top = 518.0
margin_right = 335.0
margin_bottom = 532.0
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Labels"]
margin_left = 362.0
margin_top = 518.0
margin_right = 407.0
margin_bottom = 532.0
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/Labels"]
margin_left = 444.944
margin_top = 518.888
margin_right = 499.944
margin_bottom = 532.888
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/Labels"]
margin_left = 529.945
margin_top = 518.914
margin_right = 584.945
margin_bottom = 532.914
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer/Labels"]
margin_left = 613.478
margin_top = 516.554
margin_right = 668.478
margin_bottom = 530.554
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="CanvasLayer/Labels"]
margin_left = 705.506
margin_top = 514.195
margin_right = 760.506
margin_bottom = 528.195
text = "6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Bridge1" to="." method="_on_Bridge1_pressed"]
[connection signal="pressed" from="CanvasLayer/Bridge2" to="." method="_on_Bridge2_pressed"]
[connection signal="pressed" from="CanvasLayer/Bridge3" to="." method="_on_Bridge3_pressed"]
[connection signal="pressed" from="CanvasLayer/Bridge4" to="." method="_on_Bridge4_pressed"]
[connection signal="pressed" from="CanvasLayer/Bridge5" to="." method="_on_Bridge5_pressed"]
[connection signal="pressed" from="CanvasLayer/Bridge6" to="." method="_on_Bridge6_pressed"]
